# collatz

./: Cargo.toml  LICENSE  README.md
examples/: calculate_steps.rs  cli_plot.rs  count_steps.rs  get_steps.rs  total_stopping_time.rs
src/: lib.rs
