[package]
name = "collatz"
version = "0.3.2"
edition = "2018"
resolver = "2"
license = "MIT"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
description = "Helper functions related to the Collatz conjecture"

homepage = "https://github.com/niederb/collatz"
repository = "https://github.com/niederb/collatz"
keywords = ["mathematics", "math", "algorithms", "conjecture"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]

[dev-dependencies]
rayon = "1.5.1"
textplots = "0.8.0"