[package]
name = "collatz"
version = "0.5.0"
edition = "2021"
resolver = "2"
license = "MIT"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
description = "Helper functions related to the Collatz conjecture"

homepage = "https://github.com/niederb/collatz"
repository = "https://github.com/niederb/collatz"
keywords = ["mathematics", "math", "algorithms", "conjecture"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
num = "0.4"

[dev-dependencies]
rayon = "1.6"
textplots = "0.8"